[project]
name = "cryptographycracker"
version = "0.1.0"
description = "A brute-force cryptography cracker async"
authors = [
    {name = "Mario",email = "marioluciocollinettijr@hotmail.com"},
    {name = "Felipe", email = ""},
    {name = "Enrico", email = ""}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "celery (>=5.6.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false